--- a/clientApp/src/app/navbar/navbar.component.html
+++ b/clientApp/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
           <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li> -->
@@ -20,7 +20,7 @@
           </li>
         </ul>                
 
-        <div class="btn-group d-flex"  dropdown>
+        <div class="btn-group d-flex"  dropdown *ngIf="accountService.currentUser$ | async">
           <a id="button-basic" dropdownToggle type="button" class="dropdown-toggle text-white"
                   aria-controls="dropdown-basic">
             Welcome User <span class="caret"></span>
@@ -36,7 +36,7 @@
           </ul>
         </div>
         
-        <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off" >
+        <form #loginForm="ngForm" class="d-flex container" style="margin-left:30rem;" (ngSubmit)="login()" autocomplete="off" *ngIf="!(accountService.currentUser$ | async)">
           <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="Username" />
           <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password" placeholder="Password" />
           <button class="btn btn-outline-success" type="submit">Login</button>
