--- a/clientApp/src/app/app.component.html
+++ b/clientApp/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-navbar></app-navbar>
-<app-home></app-home>
 
-<div class="container" style="margin: top 100px;">
-    
+<div class="container" style="margin-top: 5rem;">
+    <router-outlet></router-outlet>
 </div>
