--- a/clientApp/src/app/home/home.component.html
+++ b/clientApp/src/app/home/home.component.html
@@ -1,10 +1,4 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<div class="container mt-5">
+<div class="container mt-5 content-center">
     <div *ngIf="!registerMode" style="text-align:center">
         <h1>Find Your Match</h1>
         <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -14,7 +8,7 @@
         <p>All you need to do is sign up, rest is on us.</p>
         <div class="text-center">
             <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2" style="margin-right: 10px;">Sign Up</button>
-            <button class="btn btn-default btn-lg">Learn more..</button>
+            <button class="btn btn-warning btn-lg">Learn more..</button>
         </div>
     </div>
 
