--- a/clientApp/src/app/register-form/register-form.component.html
+++ b/clientApp/src/app/register-form/register-form.component.html
@@ -5,6 +5,9 @@
         <input type="text" class="form-control" name="username" placeholder="Username" [(ngModel)]="model.Username">
     </div>
     <div class="form-group mt-3">
+        <input type="text" class="form-control" name="email" placeholder="Email Address" [(ngModel)]="model.Email">
+    </div>
+    <div class="form-group mt-3">
         <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="model.Password">
     </div>
     <div class="form-group mt-3">
