--- a/clientApp/src/app/members/member-card/member-card.component.html
+++ b/clientApp/src/app/members/member-card/member-card.component.html
@@ -1,12 +1,16 @@
 <div class="card mb-4">
-    <div class="card-img-wrapper">
-        <img src="{{member.mainPhotoUrl}}" alt="{{member.knownAs}}" class="card-img-top">
-        <ul class="list-inline text-center member-icons animate">
-            <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-user"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-secondary"><i class="fa fa-heart"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-warning"><i class="fa fa-envelope"></i></button></li>
-        </ul>
-    </div>
+    <a routerLink='/members/{{member.knownAs}}'>
+        <div class="card-img-wrapper">
+            <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top">
+            <ul class="list-inline text-center member-icons animate">
+                <li class="list-inline-item"><button routerLink='/members/{{member.knownAs}}' class="btn btn-primary"><i
+                            class="fa fa-user"></i></button></li>
+                <li class="list-inline-item"><button class="btn btn-secondary"><i class="fa fa-heart"></i></button></li>
+                <li class="list-inline-item"><button class="btn btn-warning"><i class="fa fa-envelope"></i></button>
+                </li>
+            </ul>
+        </div>
+    </a>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i> {{member.knownAs}}</h6>
     </div>
