--- a/clientApp/src/app/members/member-detail/member-detail.component.html
+++ b/clientApp/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,57 @@
-<p>member-detail works!</p>
+<div class="row" *ngIf="member">
+    <div class="col-4">
+        <div class="card">
+            <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
+            <div class="card-body">
+                <div>
+                    <strong>Name:</strong>
+                    <p>{{member.firstName}} {{member.lastName}}</p>                    
+                </div>
+                <div>
+                    <strong>Age:</strong>
+                    <p>{{member.age}}</p>                    
+                </div>
+                <div>
+                    <strong>Location:</strong>
+                    <p>{{member.city}}, {{member.country}}</p>                    
+                </div>
+                <div>
+                    <strong>Last Active:</strong>
+                    <p>{{member.lastActive}}</p>                    
+                </div>
+                <div>
+                    <strong>Member Since:</strong>
+                    <p>{{member.profileCreatedAt}}</p>                    
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="btn-group d-flex">
+                    <button class="btn btn-secondary">Like</button>
+                    <button class="btn btn-warning">Message</button>                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <tabset class="member-tabset">
+            <tab heading='About {{member.knownAs}}'>
+                <h4>Description</h4>
+                <p>{{member.introduction}}</p>
+                <h4>Looking For</h4>
+                <p>{{member.lookingFor}}</p>
+            </tab>
+            <tab heading='Interests'>
+                <h4>Interests</h4>
+                <p>{{member.interests}}</p>
+            </tab>
+            <tab heading='Photos'>
+                <h4>Photos of {{member.knownAs}}</h4>
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" 
+                style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
+            </tab>
+            <tab heading='Messages'>                
+                <p>Meessages portion</p>
+            </tab>
+        </tabset>
+    </div>
+</div>
