--- a/clientApp/src/app/navbar/navbar.component.html
+++ b/clientApp/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
           </a>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu mt-3"
               role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="./member/edit">Edit Profile</a></li>
             <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
             <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
             <li class="divider dropdown-divider"></li>
