Siccessfully added Photo upload finctionality

--- a/clientApp/src/app/app.component.html
+++ b/clientApp/src/app/app.component.html
@@ -1,5 +1,10 @@
-<ngx-spinner >
-    <h3>Loading...</h3>
+<ngx-spinner
+  bdColor="rgba(255,255,255,0)"
+  size="medium"
+  color="#333333"
+  type="line-scale-party"
+>
+  <h1>Loading...</h1>
 </ngx-spinner>
 <app-navbar></app-navbar>
 
