--- a/clientApp/src/app/members/member-edit/member-edit.component.html
+++ b/clientApp/src/app/members/member-edit/member-edit.component.html
@@ -87,7 +87,7 @@
                 </form>
             </tab>
             <tab heading='Edit Photos'>
-                <h4>Photos of {{member.knownAs}}</h4>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
