functionality of Photo deleting and set to profile photo is done

--- a/clientApp/src/app/members/member-edit/member-edit.component.html
+++ b/clientApp/src/app/members/member-edit/member-edit.component.html
@@ -1,3 +1,4 @@
+<div class="row" *ngIf="!member"><h1 class="mt-5 text-center">You haven't Created Your Profile Yet :)</h1></div>
 <div class="row" *ngIf="member">
     <div class="col-4">
         <h1>Your Profile</h1>
