--- a/clientApp/src/app/members/member-edit/member-edit.component.html
+++ b/clientApp/src/app/members/member-edit/member-edit.component.html
@@ -23,11 +23,11 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive | timeago}}</p>
                 </div>
                 <div>
                     <strong>Member Since:</strong>
-                    <p>{{member.profileCreatedAt}}</p>
+                    <p>{{member.profileCreatedAt | date: 'longDate'}}</p>
                 </div>
             </div>
             <div class="card-footer">
