--- a/clientApp/src/app/members/member-list/member-list.component.html
+++ b/clientApp/src/app/members/member-list/member-list.component.html
@@ -54,7 +54,16 @@
         </div>
 
         <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
-        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button>               
+        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button> 
+        
+        <div class="mx-3"></div>
+
+        <div class="col">
+            <div class="btn-group float-right ms-5">
+                <button type="button" class="btn btn-primary ms-1" btnRadio="lastActive" name="orderBy" [(ngModel)]="userParams.orderBy" (click)="loadMembers()">Last Active</button>
+                <button type="button" class="btn btn-primary ms-1" btnRadio="created" name="orderBy" [(ngModel)]="userParams.orderBy" (click)="loadMembers()">Newest Here</button>
+            </div>
+        </div>        
     </form>
 </div>
 
