--- a/clientApp/src/app/members/member-edit/member-edit.component.html
+++ b/clientApp/src/app/members/member-edit/member-edit.component.html
@@ -23,7 +23,8 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive | timeago}}</p>
+                    <!-- <p>{{member.lastActive | timeago}}</p> -->
+                    <p>{{member.lastActive}}</p>
                 </div>
                 <div>
                     <strong>Member Since:</strong>
