--- a/clientApp/src/app/members/member-card/member-card.component.html
+++ b/clientApp/src/app/members/member-card/member-card.component.html
@@ -1,16 +1,17 @@
 <div class="card mb-4">
-    <a routerLink='/member/{{member.id}}'>
-        <div class="card-img-wrapper">
-            <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top">
-            <ul class="list-inline text-center member-icons animate">
-                <li class="list-inline-item"><button routerLink='/member/{{member.id}}' class="btn btn-primary"><i
-                            class="fa fa-user"></i></button></li>
-                <li class="list-inline-item"><button class="btn btn-secondary"><i class="fa fa-heart"></i></button></li>
-                <li class="list-inline-item"><button class="btn btn-warning"><i class="fa fa-envelope"></i></button>
-                </li>
-            </ul>
-        </div>
-    </a>
+    <div class="card-img-wrapper">
+        <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top"
+            routerLink='/member/{{member.id}}'>
+        <ul class="list-inline text-center member-icons animate">
+            <li class="list-inline-item"><button routerLink='/member/{{member.id}}' class="btn btn-primary"><i
+                        class="fa fa-user"></i></button></li>
+            <li class="list-inline-item"><button (click)="addLike(member)" class="btn btn-secondary"><i
+                        class="fa fa-heart"></i></button></li>
+            <li class="list-inline-item"><button class="btn btn-warning"><i class="fa fa-envelope"></i></button>
+            </li>
+        </ul>
+    </div>
+
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i> {{member.knownAs}}, {{member.age}}</h6>
     </div>
