--- a/clientApp/src/app/lists/lists.component.html
+++ b/clientApp/src/app/lists/lists.component.html
@@ -4,18 +4,20 @@
 <div class="container mt-3">
     <div class="row">
         <div class="btn-group col-md-5" name="predicate">
-            <button class="btn btn-primary mx-1" btnRadio="likedBy" [(ngModel)]="likeParams.predicate" (click)="loadLikes()">Members who like me</button>
-            <button class="btn btn-primary mx-1" btnRadio="liked" [(ngModel)]="likeParams.predicate" (click)="loadLikes()">Members I likes</button>            
+            <button class="btn btn-primary mx-1" btnRadio="likedBy" [(ngModel)]="likeParams.predicate"
+                (click)="loadLikes()">Members who like me</button>
+            <button class="btn btn-primary mx-1" btnRadio="liked" [(ngModel)]="likeParams.predicate"
+                (click)="loadLikes()">Members I likes</button>
         </div>
     </div>
-<div class="row mt-3">
-    <div class="col-2" *ngFor="let member of members">        
-        <app-member-card [member]="member"></app-member-card>
+    <div class="row mt-3">
+        <div class="col-2" *ngFor="let member of members">
+            <app-member-card [member]="member"></app-member-card>
+        </div>
     </div>
 </div>
-</div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center mt-3" *ngIf="pagination">
     <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
         [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;"
         nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
