--- a/clientApp/src/app/members/member-detail/member-detail.component.html
+++ b/clientApp/src/app/members/member-detail/member-detail.component.html
@@ -34,24 +34,22 @@
         </div>
     </div>
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading='About {{member.knownAs}}'>
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading='About {{member.knownAs}}' (selectTab)="onTabActivated($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking For</h4>
                 <p>{{member.lookingFor}}</p>
-            </tab>
-            <tab heading='Interests'>
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
-            </tab>
-            <tab heading='Photos'>
+            </tab>            
+            <tab heading='Photos' (selectTab)="onTabActivated($event)">
                 <h4>Photos of {{member.knownAs}}</h4>
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" 
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
-            <tab heading='Messages'>                
-                <p>Meessages portion</p>
+            <tab heading='Messages' (selectTab)="onTabActivated($event)">                
+                <app-member-messages [messages]="messages"></app-member-messages>
             </tab>
         </tabset>
     </div>
