--- a/clientApp/src/app/messages/messages.component.html
+++ b/clientApp/src/app/messages/messages.component.html
@@ -1,1 +1,54 @@
-<p>messages works!</p>
+<div class="row mb-4">
+    <div class="btn-group col-md-5" name="container">
+        <button class="btn btn-primary mx-1" btnRadio="Unread" [(ngModel)]="messageParams.container"
+            (click)="loadMessages()"><i class="fa fa-envelope"></i> Unread Messages</button>
+        <button class="btn btn-primary mx-1" btnRadio="Inbox" [(ngModel)]="messageParams.container"
+            (click)="loadMessages()"><i class="fa fa-envelope-open"></i> Inbox</button>
+        <button class="btn btn-primary mx-1" btnRadio="Outbox" [(ngModel)]="messageParams.container"
+            (click)="loadMessages()"><i class="fa fa-paper-plane"></i> Sent</button>
+    </div>
+</div>
+<div class="row text-center" *ngIf="messages?.length === 0"><h3>No Messages :)</h3></div>
+<div class="row" *ngIf="messages?.length > 0">
+    <table class="table table-hover" style="cursor: pointer;">
+        <tr>
+            <th style="width: 40%">Message</th>
+            <th style="width: 20%">From / To</th>
+            <th style="width: 20%">Sent / Received</th>
+            <th style="width: 20%">Actions</th>
+        </tr>
+        <tr  *ngFor="let message of messages" 
+            routerLink='{{messageParams.container === "Outbox" 
+                ? "/member/" + message.recipientId 
+                : "/member/" + message.senderId}}' [queryParams]='{tab: 3}' >
+            <td>{{message.content}}</td>    
+            <td>
+                <div *ngIf="messageParams.container === 'Outbox'">
+                    <img 
+                        class="img-circle rounded-circle"
+                        src="{{message.recipientPhotoUrl || './assets.user.png'}}" 
+                        alt="{{message.recipientId}}">
+                    <strong>{{message.recipientName | titlecase}}</strong>
+                </div> 
+                <div *ngIf="messageParams.container !== 'Outbox'">
+                    <img 
+                        class="img-circle rounded-circle"
+                        src="{{message.senderPhotoUrl || './assets.user.png'}}" 
+                        alt="{{message.senderId}}">
+                    <strong>{{message.senderName | titlecase}}</strong>
+                </div> 
+            </td>
+            <td>{{message.messageSent | timeago}}</td>
+            <td>
+                <button class="btn btn-primary">Delete Message</button>
+            </td>
+        </tr>
+    </table>
+</div>
+
+<div class="d-flex justify-content-center mt-3" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;"
+        nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+    </pagination>
+</div>
