Profile creation and photo upload added But at this commit my application become unresponsive i don't why

--- a/clientApp/src/app/_forms/date-input/date-input.component.html
+++ b/clientApp/src/app/_forms/date-input/date-input.component.html
@@ -1,6 +1,7 @@
-<div class="form-group mt-3 mb-3">
+<div class="form-group">
     <input 
         [class.is-invalid]="ngControl.touched && ngControl.invalid"
+        [class.is-valid]="ngControl.touched && ngControl.valid"
         type="text"
         class="form-control" 
         [formControl]='$any(ngControl.control)'
