--- a/clientApp/src/app/register-form/register-form.component.html
+++ b/clientApp/src/app/register-form/register-form.component.html
@@ -1,18 +1,42 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off" *ngIf="!addProfile">
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr>
-    <app-text-inputs [formControl]='$any(registerForm.controls["username"])' [label]='"Username"'></app-text-inputs>    
-    <app-text-inputs [formControl]='$any(registerForm.controls["email"])' [label]='"Email Address"'></app-text-inputs>
-    <app-text-inputs [formControl]='$any(registerForm.controls["password"])' [label]='"Password"' [type]='"password"'></app-text-inputs>
-    <app-text-inputs [formControl]='$any(registerForm.controls["confirmPassword"])' [label]='"Confirm Password"'[type]='"password"'></app-text-inputs>
+
+    <div class="row" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">{{error}}</li>
+        </ul>
+        <hr>
+    </div>
+
+    <div class="mt-3 mb-3">
+        <app-text-inputs [formControl]='$any(registerForm.controls["username"])' [label]='"Username"'></app-text-inputs>
+    </div>
+    <div class="mt-3 mb-3">
+        <app-text-inputs [formControl]='$any(registerForm.controls["email"])' [label]='"Email Address"'>
+        </app-text-inputs>
+    </div>
+    <div class="mt-3 mb-3">
+        <app-text-inputs [formControl]='$any(registerForm.controls["password"])' [label]='"Password"'
+            [type]='"password"'></app-text-inputs>
+    </div>
+    <div class="mt-3 mb-3">
+        <app-text-inputs [formControl]='$any(registerForm.controls["confirmPassword"])' [label]='"Confirm Password"'
+            [type]='"password"'></app-text-inputs>
+    </div>
+
     <div class="form-group text-center mt-3">
-        <button class="btn btn-success mr-2" style="margin-right: 10px;" type="submit">Register</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" style="margin-right: 10px;"
+            type="submit">Register</button>
         <button class="btn btn-warning mr-2" style="margin-right: 10px;" type="button" (click)="cancel()">Back</button>
     </div>
 </form>
 
-<p>Form Value: {{registerForm.value | json}}</p>
-<p>Form Status: {{registerForm.status| json}}</p>
+<app-user-profile-form *ngIf="addProfile"></app-user-profile-form>
+
+
+<!-- <p>Form Value: {{registerForm.value | json}}</p>
+<p>Form Status: {{registerForm.status| json}}</p> -->
 
 
 <!-- ============================================================================================================================ -->
