--- a/clientApp/src/app/navbar/navbar.component.html
+++ b/clientApp/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin Panel</a>
+          </li>
         </ul>                
 
         <div class="btn-group d-flex"  dropdown *ngIf="(accountService.currentUser$ | async) as user">
