--- a/clientApp/src/app/admin/user-management/user-management.component.html
+++ b/clientApp/src/app/admin/user-management/user-management.component.html
@@ -5,10 +5,10 @@
             <th style="width: 40%">Active Roles</th>
             <th style="width: 30%"></th>
         </tr>
-        <tr  *ngFor="let user of users">
+        <tr *ngFor="let user of users">
             <td>{{user.username}}</td>
             <td>{{user.roles}}</td>
-            <td><button class="btn btn-outline-info">Edit Roles</button></td>
+            <td><button (click)="openRolesModal(user)" class="btn btn-outline-info">Edit Roles</button></td>
         </tr>
     </table>
 </div>
