--- a/clientApp/src/app/admin/user-management/user-management.component.html
+++ b/clientApp/src/app/admin/user-management/user-management.component.html
@@ -8,7 +8,11 @@
         <tr *ngFor="let user of users">
             <td>{{user.username}}</td>
             <td>{{user.roles}}</td>
-            <td><button (click)="openRolesModal(user)" class="btn btn-outline-info">Edit Roles</button></td>
+            <td>
+                <button (click)="openRolesModal(user)" class=" mx-1 btn btn-outline-info">Edit Roles</button>
+                <button *ngIf="user.isDisabled" (click)="disableAccount(user,'false')" class="mx-1 btn btn-outline-success">Enable Account</button>
+                <button *ngIf="!user.isDisabled" (click)="disableAccount(user,'true')" class="mx-1 btn btn-outline-danger">Disable Account</button>
+            </td>        
         </tr>
     </table>
 </div>
