--- a/clientApp/src/app/members/photo-editor/photo-editor.component.html
+++ b/clientApp/src/app/members/photo-editor/photo-editor.component.html
@@ -2,10 +2,11 @@
     <div class="col-2" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
         <div class="text-center">
-            <button [disabled]="photo.isMain" (click)="setMainPhoto(photo)" [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
+            <button [disabled]="photo.isMain" (click)="setMainPhoto(photo)"
+                [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
                 class="btn btn-sm mx-1">Main</button>
-            <button [disabled]="photo.isMain" (click)="deletePhoto(photo)" 
-                class="btn btn-sm btn-danger mx-1"><i class="fa fa-trash"></i></button>
+            <button [disabled]="photo.isMain" (click)="deletePhoto(photo)" class="btn btn-sm btn-danger mx-1"><i
+                    class="fa fa-trash"></i></button>
         </div>
     </div>
 </div>
@@ -13,11 +14,13 @@
 <div class="row mt-5">
     <div class="col-md-3">
         <h5>Add Photos</h5>
-        <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
-            [uploader]="uploader" class="card bg-faded p-3 text-center mb-3 my-drop-zone mt-3">
-            <i class="fa fa-upload fa-3x"></i>
-            Drop Photo
-        </div>
+        <ng-container *ngIf="!isMemberDisabled">
+            <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
+                [uploader]="uploader" class="card bg-faded p-3 text-center mb-3 my-drop-zone mt-3">
+                <i class="fa fa-upload fa-3x"></i>
+                Drop Photo
+            </div>
+        </ng-container>
 
         <!-- <div ng2FileDrop
              [ngClass]="{'another-file-over-class': hasAnotherDropZoneOver}"
@@ -29,12 +32,12 @@
 
         <div class="mt2">
             Multiple Photos
-            <input type="file" ng2FileSelect [uploader]="uploader" multiple />
+            <input [disabled]="isMemberDisabled" type="file" ng2FileSelect [uploader]="uploader" multiple />
         </div>
 
         <div class="mt-2">
             Single Photo
-            <input type="file" ng2FileSelect [uploader]="uploader" />
+            <input [disabled]="isMemberDisabled" type="file" ng2FileSelect [uploader]="uploader" />
         </div>
     </div>
 
