--- a/clientApp/src/app/members/member-card/member-card.component.css
+++ b/clientApp/src/app/members/member-card/member-card.component.css
@@ -35,6 +35,7 @@
     transition: all 0.3s ease-in-out;
 }
 
+/* This will blink any object */
 @keyframes fa-blink {
     0% {opacity: 1;}
     100% {opacity: 0.4;}
