--- a/clientApp/src/app/members/member-card/member-card.component.html
+++ b/clientApp/src/app/members/member-card/member-card.component.html
@@ -14,7 +14,12 @@
     </div>
 
     <div class="card-body p-1">
-        <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i> {{member.knownAs}}, {{member.age}}</h6>
+        <h6 class="card-title text-center mb-1">
+            <span [class.is-online]="(userPresenceService.onlineUsers$ | async).includes(member.knownAs)">
+                <i class="fa fa-user mr-2"></i> 
+            </span>
+            
+            {{member.knownAs}}, {{member.age}}</h6>
     </div>
     <p class="card-text text-muted text-center">{{member.city}}</p>
 </div>
