--- a/clientApp/src/app/members/member-detail/member-detail.component.html
+++ b/clientApp/src/app/members/member-detail/member-detail.component.html
@@ -3,6 +3,9 @@
         <div class="card">
             <img src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
             <div class="card-body">
+                <div class="mb-2" *ngIf="(userPresenceService.onlineUsers$ | async).includes(member.knownAs)">
+                    <i class="fa fa-user-circle text-success"></i> Online Now
+                </div>
                 <div>
                     <strong>Name:</strong>
                     <p>{{member.firstName}} {{member.lastName}}</p>                    
