--- a/clientApp/src/app/members/member-detail/member-detail.component.html
+++ b/clientApp/src/app/members/member-detail/member-detail.component.html
@@ -52,7 +52,7 @@
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Messages' (selectTab)="onTabActivated($event)">                
-                <app-member-messages [messages]="messages" [recipientId]="member.id" ></app-member-messages>
+                <app-member-messages [recipientId]="member.id" ></app-member-messages>
             </tab>
         </tabset>
     </div>
